
        * VrmlMatrix: made construction from 4x4 array explicit.

        * VrmlMatrix: removed automatic conversion to float *.  Use
          operator[] for this instead.

        * VrmlMatrix: removed assignment operator definitions; just use
          the compiler-defined operator=.

        * Removed VrmlMatrix::makeIdentity. Just assign to a default
          VrmlMatrix instead.

2002-02-13  Braden McDaniel  <braden@endoframe.com>

        * Updated doc/Makefile.am for Autoconf 2.52; added openvrml.css
          to the distribution.
        
        * Fixed cases where the parser was returning a funky line
          number: use the "antlr::SemanicException" constructor
          that takes a line number argument.

        * Fixed crash in parser when an invalid field value was
          encountered.

2002-02-11  Braden McDaniel  <braden@endoframe.com>

        * Corrected incorrect application of patch from Frederic
          Devernay <Frederic.Devernay@sophia.inria.fr>. Fixed pkg-config
          metafiles.

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          Put operators in OpenVRML namespace.

2002-02-09  Braden McDaniel  <braden@endoframe.com>

        * "FieldValue::assign" can throw "std::bad_alloc", too.

        * Doxyfile.in: Fixed package name and version; don't show "used
          files" in the output.

        * Doxygen stylesheet changes.

2002-02-08  Braden McDaniel  <braden@endoframe.com>

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          configure.ac: AC_PREREQ should be first. fixed version.

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          openvrml-gl.pc openvrml.pc: fixed pkg-config compliance.

        * Applied patch from Frederic Devernay
          <Frederic.Devernay@sophia.inria.fr>.
          macros/gtkgl.m4: fixed OV_CHECK_GL macro name.
